# client_pico

./: CMakeLists.txt  LICENSE  ReadME.txt  client.c
src/: addition.c  chip_init.c  compress_decompress.c  config.c  crypto.c  flash_reader.c  lzrw3-a.c  monocypher.c  network.c  network_data.c  random.c  random_entropy.c  timing.c  xdrbg.c
src/client/: pin.c
src/include/: addition.h  chip_init.h  compress_decompress.h  crypto.h  error.h  flash_reader.h  lzrw.h  monocypher.h  network.h  network_data.h  parameters.h  random.h  random_entropy.h  timing.h  xdrbg.h
src/include/client/: pin.h
